--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
+    "react-social-icons": "^6.24.0",
     "swiper": "^11.2.10",
     "yup": "^1.6.1"
   },
